--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -682,7 +682,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Data Separation"
+    "# Dependant and independent variables"
    ],
    "metadata": {
     "collapsed": false
