Modifying Logistic Regression

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2,34 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-25T04:42:32.979814500Z",
-     "start_time": "2023-12-25T04:42:32.960104Z"
+     "end_time": "2023-12-25T05:08:38.127420200Z",
+     "start_time": "2023-12-25T05:08:38.111799100Z"
     }
    },
    "outputs": [],
    "source": [
     "# import the necessary libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn import metrics\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression model accuracy (in %): 80.33707865168539\n"
+      "Accuracy: 80.47752808988764\n",
+      "Precision: 78.544061302682\n",
+      "Recall: 71.18055555555556\n"
      ]
     },
     {
@@ -37,15 +38,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\yahia\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "C:\\Users\\yahia\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
@@ -57,33 +50,29 @@
     "y_test  = pd.read_csv('Preprocessed Data/y_test.csv').to_numpy()\n",
     "\n",
     "# LogisticRegression\n",
-    "model = LogisticRegression(random_state=0)\n",
+    "model = LogisticRegression(max_iter=1000)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Prediction\n",
     "y_pred = model.predict(X_test)\n",
     " \n",
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "print(\"Logistic Regression model accuracy (in %):\", acc*100)"
+    "# Evaluate the model\n",
+    "accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "precision = metrics.precision_score(y_test, y_pred)\n",
+    "recall = metrics.recall_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy*100)\n",
+    "print(\"Precision:\", precision*100)\n",
+    "print(\"Recall:\", recall*100)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T04:48:46.086377500Z",
-     "start_time": "2023-12-25T04:48:46.041468800Z"
+     "end_time": "2023-12-25T05:32:46.082156600Z",
+     "start_time": "2023-12-25T05:32:46.025983600Z"
     }
    },
    "id": "74bf6ca9f0ca3b31"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d838ca1d2b95428f"
   }
  ],
  "metadata": {
