Adding Decision Tree Model

--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -8,21 +8,22 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "675e523b22e680bf"
+   "id": "88057b02c419f0f0"
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn import metrics"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-12-25T05:39:08.946134600Z"
+     "end_time": "2023-12-25T05:46:18.269728600Z",
+     "start_time": "2023-12-25T05:46:18.269728600Z"
     }
    },
    "id": "initial_id"
@@ -30,73 +31,64 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Load the dataset"
+    "# Load the dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "20b36ae8090aeb9c"
+   "id": "9f2e87a498471d31"
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "\n",
     "X_train = pd.read_csv('Preprocessed Data/X_train.csv').to_numpy()\n",
     "y_train = pd.read_csv('Preprocessed Data/y_train.csv').to_numpy()\n",
     "X_test  = pd.read_csv('Preprocessed Data/X_test.csv').to_numpy()\n",
-    "y_test  = pd.read_csv('Preprocessed Data/y_test.csv').to_numpy()"
+    "y_test  = pd.read_csv('Preprocessed Data/y_test.csv').to_numpy()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:39:09.012906400Z",
-     "start_time": "2023-12-25T05:39:08.961484400Z"
+     "end_time": "2023-12-25T05:46:19.562640900Z",
+     "start_time": "2023-12-25T05:46:19.515850100Z"
     }
    },
-   "id": "b50b3d09681bf2b7"
+   "id": "b37cf5ac5ab62d4b"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## LogisticRegression Model"
+    "## Decision Tree Model"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "d93c8188345ef009"
+   "id": "212b42a34c135598"
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yahia\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    }
-   ],
+   "execution_count": 10,
+   "outputs": [],
    "source": [
     "# model creation\n",
-    "model = LogisticRegression(max_iter=1000)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = DecisionTreeClassifier()\n",
     "\n",
-    "# Prediction\n",
-    "y_pred = model.predict(X_test)\n",
-    " "
+    "# train the model\n",
+    "model.fit(X_train,y_train)\n",
+    "\n",
+    "# prediction\n",
+    "y_pred = model.predict(X_test)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:45:31.996480100Z",
-     "start_time": "2023-12-25T05:45:31.952701Z"
+     "end_time": "2023-12-25T05:48:05.555115300Z",
+     "start_time": "2023-12-25T05:48:05.523873400Z"
     }
    },
-   "id": "74bf6ca9f0ca3b31"
+   "id": "ae0a8607ffc53a8"
   },
   {
    "cell_type": "markdown",
@@ -106,19 +98,19 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "e8fd50fd93a4bb3"
+   "id": "bbf614eca5ff3ea7"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 80.47752808988764\n",
-      "Precision: 78.544061302682\n",
-      "Recall: 71.18055555555556\n"
+      "Accuracy: 98.59550561797754\n",
+      "Precision: 100.0\n",
+      "Recall: 96.52777777777779\n"
      ]
     }
    ],
@@ -134,11 +126,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:45:33.618010700Z",
-     "start_time": "2023-12-25T05:45:33.539878800Z"
+     "end_time": "2023-12-25T05:48:11.161774300Z",
+     "start_time": "2023-12-25T05:48:11.145876600Z"
     }
    },
-   "id": "16bdc77f78089b34"
+   "id": "ed17ca4d22889e34"
   },
   {
    "cell_type": "code",
@@ -148,7 +140,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "cb19e67d2bb211f5"
+   "id": "3c8eb2c298518a31"
   }
  ],
  "metadata": {
