Adding Models files

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -12,17 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import pickle"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-12-25T05:39:08.946134600Z"
+     "end_time": "2023-12-25T07:56:58.157625900Z",
+     "start_time": "2023-12-25T07:56:58.126721800Z"
     }
    },
    "id": "initial_id"
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "\n",
@@ -51,8 +53,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:39:09.012906400Z",
-     "start_time": "2023-12-25T05:39:08.961484400Z"
+     "end_time": "2023-12-25T07:56:58.235743200Z",
+     "start_time": "2023-12-25T07:56:58.142003900Z"
     }
    },
    "id": "b50b3d09681bf2b7"
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stderr",
@@ -92,8 +94,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:45:31.996480100Z",
-     "start_time": "2023-12-25T05:45:31.952701Z"
+     "end_time": "2023-12-25T07:56:58.251377400Z",
+     "start_time": "2023-12-25T07:56:58.173246200Z"
     }
    },
    "id": "74bf6ca9f0ca3b31"
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -134,21 +136,41 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:45:33.618010700Z",
-     "start_time": "2023-12-25T05:45:33.539878800Z"
+     "end_time": "2023-12-25T07:56:58.251377400Z",
+     "start_time": "2023-12-25T07:56:58.220131500Z"
     }
    },
    "id": "16bdc77f78089b34"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "pickle.dump(model, open(r\"logistic_regression_model.pkl\",'wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-25T07:56:58.282630300Z",
+     "start_time": "2023-12-25T07:56:58.251377400Z"
+    }
+   },
+   "id": "cb19e67d2bb211f5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-25T07:56:58.345244600Z",
+     "start_time": "2023-12-25T07:56:58.266974800Z"
+    }
    },
-   "id": "cb19e67d2bb211f5"
+   "id": "25bd84363d5eb025"
   }
  ],
  "metadata": {
