--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -12,18 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import pickle"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:46:18.269728600Z",
-     "start_time": "2023-12-25T05:46:18.269728600Z"
+     "end_time": "2023-12-25T07:51:11.202337600Z",
+     "start_time": "2023-12-25T07:51:09.530026800Z"
     }
    },
    "id": "initial_id"
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "X_train = pd.read_csv('Preprocessed Data/X_train.csv').to_numpy()\n",
@@ -51,8 +52,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:46:19.562640900Z",
-     "start_time": "2023-12-25T05:46:19.515850100Z"
+     "end_time": "2023-12-25T07:51:11.233586400Z",
+     "start_time": "2023-12-25T07:51:11.202337600Z"
     }
    },
    "id": "b37cf5ac5ab62d4b"
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# model creation\n",
@@ -84,8 +85,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:48:05.555115300Z",
-     "start_time": "2023-12-25T05:48:05.523873400Z"
+     "end_time": "2023-12-25T07:51:11.256868900Z",
+     "start_time": "2023-12-25T07:51:11.241195Z"
     }
    },
    "id": "ae0a8607ffc53a8"
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -126,11 +127,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-25T05:48:11.161774300Z",
-     "start_time": "2023-12-25T05:48:11.145876600Z"
+     "end_time": "2023-12-25T07:51:11.288104500Z",
+     "start_time": "2023-12-25T07:51:11.256868900Z"
     }
    },
    "id": "ed17ca4d22889e34"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "pickle.dump(model,open(r\"decision_tree_model.pkl\",'wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-25T07:55:47.455341200Z",
+     "start_time": "2023-12-25T07:55:47.424067500Z"
+    }
+   },
+   "id": "170aa1eaaae75c7b"
   },
   {
    "cell_type": "code",
@@ -140,7 +157,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "3c8eb2c298518a31"
+   "id": "d561b688db796b0c"
   }
  ],
  "metadata": {
